[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Tiles/true_iso_asphalt.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tile.gd" type="Script" id=2]

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -159 )
texture = ExtResource( 1 )
offset = Vector2( 127, -95 )

[node name="TileArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TileArea"]
position = Vector2( 127, -33 )
polygon = PoolVector2Array( 110, -65, 0, -119, -111, -64, 0, -10 )

[connection signal="mouse_entered" from="TileArea" to="." method="_on_TileArea_mouse_entered"]
[connection signal="mouse_exited" from="TileArea" to="." method="_on_TileArea_mouse_exited"]
